--- a/css/upload.css
+++ b/css/upload.css
@@ -1,41 +1,55 @@
-#drop_file_zone {
-    background-color: #EEE; 
-    border: #999 5px dashed;
-    width: 290px; 
-    height: 200px;
-    padding: 8px;
-    font-size: 18px;
-}        
 #drag_upload_file #selectfile {
-  display: none;
+    display: none;
 } 
+
 .rightmenu{
-/* position: absolute; */
-/* z-index: 20; */
-position: absolute;
-z-index: 20;
-top: 82px;
-bottom: 30px;
-width: 250px;
-padding-bottom: 67px;
-border-right: 1px solid #c4c3c3;
-background-color: #fff;
-line-height: normal;
--webkit-box-sizing: border-box;
-box-sizing: border-box;
+    /* position: absolute; */
+    /* z-index: 20; */
+    position: absolute;
+    z-index: 20;
+    top: 82px;
+    bottom: 30px;
+    width: 250px;
+    padding-bottom: 67px;
+    border-right: 1px solid #c4c3c3;
+    background-color: #fff;
+    line-height: normal;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
+
 .leftmenu{
-display: flex;
--moz-flex-direction: column;
--ms-flex-direction: column;
--webkit-box-orient: vertical;
--webkit-box-direction: normal;
-flex-direction: column;
-position: absolute;
-top: 27px;
-left: 250px;
-right: 0;
-bottom: 0;
-z-index: 20;
-padding: 55px 0 30px 0;
+    display: flex;
+    -moz-flex-direction: column;
+    -ms-flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    position: absolute;
+    top: 27px;
+    left: 250px;
+    right: 0;
+    bottom: 0;
+    z-index: 20;
+    padding: 55px 0 30px 0;
 }
+
+#content {
+    display: flex;
+    position: absolute;
+    top: 82px;
+    left: 250px;
+    right: 0;
+    bottom: 0;
+    z-index: 20;
+}
+
+#drop_file_zone {
+  background-color: #EEE; 
+  border: #999 5px dashed; 
+  padding: 8px;
+  font-size: 18px;
+  flex : 1 1 auto;
+  overflow-y: auto;
+  overflow-x: hidden;
+}      
