--- a/css/upload.css
+++ b/css/upload.css
@@ -1,15 +1,19 @@
 #drop_file_zone {
-  background-color: #EEE; 
-  border: #999 5px dashed;
-  width: 290px; 
-  height: 200px;
   padding: 8px;
   font-size: 18px;
-}        
+  flex : 1 1 auto;
+  overflow-y: auto;
+  overflow-x: hidden;
+}      
+
 #drag_upload_file #selectfile {
   display: none;
-} 
+}
 
+#drop_file_zone{
+  height: 100%;
+  width: 100%;
+}
 .leftmenu{
   position: absolute;
   z-index: 20;
@@ -23,6 +27,7 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+
 .leftmenu ul li{
   display: flex;
 }
@@ -51,9 +56,24 @@
   padding: 0px 0 30px 0;
 }
 
-.share{
-  display: none;
+.storage{
+  height: 100%;
 }
+.storage p{
+  cursor: pointer;
+}
+.storage p:hover{
+  color: turquoise;
+}
+
 .trash{
   display: none;
+  height: 100%;
+  padding: 8px;
+}
+.trash p{
+  cursor: pointer;
+}
+.trash p:hover{
+  color: turquoise;
 }
