파일 확장자 목록 분류 & 파일 용량 표시
파일 확장자 목록 분류 & 파일 용량 표시

--- a/css/tool.css
+++ b/css/tool.css
@@ -1,6 +1,5 @@
 .info {
-    border: 1px solid cornflowerblue;
-    border-top: none;
+    border-bottom: 1px solid cornflowerblue;
     display: flow-root;
 }
 .info input[type="button"]{
@@ -17,8 +16,7 @@
 }
 
 .search {
-    border: 1px solid cornflowerblue;
-    border-top: none;
+    border-bottom: 1px solid cornflowerblue;
     display: flow-root;
 }
 .search form{
