--- a/css/upload.css
+++ b/css/upload.css
@@ -11,6 +11,7 @@
   margin: 15px 0px;
   display: flex;
   flex-wrap: wrap;
+  user-select: none;
 }
 #drop_file_zone ul li{
   border: 1px solid lightgray;
@@ -103,42 +104,6 @@
   cursor: pointer;
 }
 .trash p:hover{
-  color: turquoise;
-}
-
-.photo{
-  display: none;
-  height: 100%;
-  padding: 8px;
-}
-.photo p{
-  cursor: pointer;
-}
-.photo p:hover{
-  color: turquoise;
-}
-
-.document{
-  display: none;
-  height: 100%;
-  padding: 8px;
-}
-.document p{
-  cursor: pointer;
-}
-.document p:hover{
-  color: turquoise;
-}
-
-.video{
-  display: none;
-  height: 100%;
-  padding: 8px;
-}
-.video p{
-  cursor: pointer;
-}
-.video p:hover{
   color: turquoise;
 }
 
