--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ body{
 
 .logout{
     color: white;
-    padding: 4px 15px;
+    padding: 10px 15px;
     position: relative;
     text-align: center;
     text-decoration: none;
@@ -44,4 +44,6 @@ body{
     font-size: 16px;
     text-align: center;
     padding: 4px 15px;
+    margin: 10px;
+    
 }
