--- a/css/upload.css
+++ b/css/upload.css
@@ -47,7 +47,7 @@
 .leftmenu{
   position: absolute;
   z-index: 20;
-  top: 86px;
+  top: 99px;
   bottom: 30px;
   width: 165px;
   padding-bottom: 67px;
@@ -80,18 +80,19 @@
   -webkit-box-direction: normal;
   flex-direction: column;
   position: absolute;
-  top: 82px;
+  top: 99px;
   left: 167px;
   right: 0;
   bottom: 0;
   z-index: 20;
   padding: 0px 0 30px 0;
+
 }
 
 .storage{
   height: 100%;
 }
-.storage p{
+.storage li{
   cursor: pointer;
 }
 
@@ -107,7 +108,7 @@
 }
 .searchform ul{
   display: flex;
-  padding: 20px 0px 0px 10px;
+  padding: 18px 0px 0px 17px;
 }
 .searchform ul li input[type="submit"]{
   background-color: cornflowerblue;
