--- a/css/upload.css
+++ b/css/upload.css
@@ -175,3 +175,42 @@
   background-color: cornflowerblue;
   border-color: cornflowerblue;
 }
+
+.contextmenu {
+  display: none;
+  position: absolute;
+  width: 200px;
+  margin: 0;
+  padding: 0;
+  background: #FFFFFF;
+  border-radius: 5px;
+  list-style: none;
+  box-shadow:
+    0 15px 35px rgba(50,50,90,0.1),
+    0 5px 15px rgba(0,0,0,0.07);
+  overflow: hidden;
+  z-index: 999999;
+}
+
+.contextmenu li {
+  border-left: 3px solid transparent;
+  transition: ease .2s;
+}
+
+.contextmenu li a {
+  display: block;
+  padding: 10px;
+  color: black;
+  text-decoration: none;
+  transition: ease .2s;
+}
+
+.contextmenu li:hover {
+  background: cornflowerblue;
+  border-left: 3px solid blue;
+
+}
+
+.contextmenu li:hover a {
+  color: #FFFFFF;
+}
