--- a/css/upload.css
+++ b/css/upload.css
@@ -31,10 +31,6 @@
 #drop_file_zone ul li p{
   text-align: center;
   text-overflow: ellipsis;
-<<<<<<< HEAD
-=======
-  width: 90px;
->>>>>>> origin/yks
   overflow: hidden;
   white-space: nowrap;
   user-select: none;
@@ -52,23 +48,16 @@
 .leftmenu{
   position: absolute;
   z-index: 20;
-  top: 99px;
+  top: 94px;
   bottom: 30px;
   width: 165px;
-<<<<<<< HEAD
   height: 100%;
-=======
->>>>>>> origin/yks
   padding-bottom: 67px;
   border-right: 1px solid cornflowerblue;
   background-color: #fff;
   line-height: normal;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-<<<<<<< HEAD
-
-=======
->>>>>>> origin/yks
 }
 
 .leftmenu ul li{
@@ -93,8 +82,8 @@
   -webkit-box-direction: normal;
   flex-direction: column;
   position: absolute;
-  top: 99px;
-  left: 167px;
+  top: 94px;
+  left: 165px;
   right: 0;
   bottom: 0;
   z-index: 20;
@@ -224,4 +213,28 @@
 
 .contextmenu li:hover a {
   color: #FFFFFF;
+}
+
+.imgview{
+  display: none;
+  position: absolute;
+  z-index: 999;
+  background-color: black;
+  width: 100%;
+  height: 100%;
+
+}
+
+.imgview a{
+  cursor: pointer;
+  right: 30px;
+  font-size: 20px;
+  position: absolute;
+}
+.imgview a:hover{
+  color:turquoise;
+}
+.imgview img{
+  position: relative;
+
 }
