--- a/css/upload.css
+++ b/css/upload.css
@@ -222,7 +222,7 @@
   background-color: black;
   width: 100%;
   height: 100%;
-
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
 .imgview a{
@@ -236,5 +236,8 @@
 }
 .imgview img{
   position: relative;
-
+}
+.imgview li{
+  padding: 20px 0px 50px 0px;
+  
 }
