--- a/css/upload.css
+++ b/css/upload.css
@@ -195,6 +195,7 @@
 .contextmenu li {
   border-left: 3px solid transparent;
   transition: ease .2s;
+  cursor: pointer;
 }
 
 .contextmenu li a {
@@ -203,12 +204,12 @@
   color: black;
   text-decoration: none;
   transition: ease .2s;
+  cursor: pointer;
 }
 
 .contextmenu li:hover {
   background: cornflowerblue;
   border-left: 3px solid blue;
-
 }
 
 .contextmenu li:hover a {
@@ -244,4 +245,5 @@
   color: lightgray;
   right: 0;
   position: absolute;
+  
 }
