--- a/css/main.css
+++ b/css/main.css
@@ -39,11 +39,8 @@ body{
 }
 .idinfo{
     display: flex;
-    position: absolute;
     font-weight: bold;
     font-size: 16px;
-    text-align: center;
-    padding: 4px 15px;
-    margin: 10px;
-    
+    text-align: center; 
+    margin: 2px 0px;
 }
