--- a/css/upload.css
+++ b/css/upload.css
@@ -101,7 +101,7 @@
   cursor: pointer;
 }
 
-.progessbar{
+.userinfo{
   border-bottom: 1px solid lightgrey;
   padding: 12px 0px;
   margin: 0px 0px 15px 0px;
@@ -195,6 +195,7 @@
 .contextmenu li {
   border-left: 3px solid transparent;
   transition: ease .2s;
+  cursor: pointer;
 }
 
 .contextmenu li a {
@@ -203,12 +204,12 @@
   color: black;
   text-decoration: none;
   transition: ease .2s;
+  cursor: pointer;
 }
 
 .contextmenu li:hover {
   background: cornflowerblue;
   border-left: 3px solid blue;
-
 }
 
 .contextmenu li:hover a {
@@ -244,4 +245,114 @@
   color: lightgray;
   right: 0;
   position: absolute;
+  
+}
+
+.nav_right_menu{
+  float: right;
+  width: 260px;
+}
+
+#bell_img{
+  margin: 6px;
+  cursor: pointer;
+  position: relative;
+  float: right;
+}
+
+.msgmenu {
+  display: none;
+  position: absolute;
+  width: 100%;
+  top: 45px;
+  margin: 0;
+  padding: 0;
+  background: #FFFFFF;
+  border-radius: 5px;
+  list-style: none;
+  box-shadow: 0 15px 35px rgba(50,50,90,0.1), 0 5px 15px rgba(0,0,0,0.07);
+  overflow: hidden;
+  z-index: 999999;
+  font-size: 30px;
+  border: 2px solid lightgrey;
+}
+.msgmenu li{
+  cursor: pointer;
+}
+
+.msgmenu li a{
+  padding: 0px 15px;
+  text-align: center;
+}
+
+.msg_btn_left{
+  display: inline-block;
+  border-bottom: 2px solid lightgray;
+  border-right: 2px solid lightgray;
+  background-color: cornflowerblue;
+}
+.msg_btn_left a{
+  padding: 0px 15px;
+  text-align: center;
+  color: white;
+  -ms-user-select: none; 
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+.msg_btn_left:hover{
+  background-color:turquoise;
+}
+
+.msg_btn_right{
+  display: inline-block;
+  border-bottom: 2px solid lightgray;
+  background-color: cornflowerblue;
+}
+.msg_btn_right a{
+  padding: 0px 15px;
+  text-align: center;
+  color: white;
+  -ms-user-select: none; 
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+.msg_btn_right:hover{
+  background-color:turquoise;
+}
+
+.msg_content:hover{
+  background-color: turquoise;
+}
+
+.msg_content_read{
+  background-color: lightgrey;
+}
+.msg_content_read:hover{
+  background-color: turquoise;
+}
+
+.msgcount{
+  text-align: center;
+  margin: 13px 20px;
+  color: red;
+  position: fixed;
+}
+
+a, input, h1, img
+{
+  -ms-user-select: none; 
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.logo
+{
+  position: absolute;
+  cursor: pointer;
 }
