--- a/css/upload.css
+++ b/css/upload.css
@@ -47,7 +47,7 @@
 
 .leftmenu{
   position: absolute;
-  z-index: 20;
+  z-index: 120;
   top: 94px;
   bottom: 30px;
   width: 165px;
@@ -129,8 +129,10 @@
   border: none;
   height: 40px;
   padding: 0px 10px;
-  margin: 0px 5px 10px 0px;
+  margin-right: 12px;
+  margin-bottom: 10px;
   cursor: pointer;
+  width: 80px;
 }
 .searchform ul li input[type="submit"]:hover{
   background-color: turquoise;
@@ -223,6 +225,76 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.9);
+}
+
+.mkdirview
+{
+  display: none;
+  position: absolute;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  /*background-color: rgba(100, 149, 237, 0.9);*/
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.mkdir_from
+{
+    position: absolute;
+    width: 300px;
+    top: 50%;
+    margin-top: -120px;
+    margin-left: -150px;
+    left: 50%;
+}
+
+.mkdir_from a
+{
+  color: white;
+}
+
+.mkdir_li_a
+{
+  margin: 0px 0px 5px;
+}
+
+.mkdir_from input[type="submit"]
+{
+    color: white;
+    background: cornflowerblue;
+    border: none;
+    padding: 7px 8px;
+    margin-top: 10px;
+    margin-right: 5px;
+    width: 49%;
+    cursor: pointer;
+}
+
+.mkdir_from input[type="button"]
+{
+    color: white;
+    background: cornflowerblue;
+    border: none;
+    padding: 7px 8px;
+    margin-top: 10px;
+    width: 49%;
+    cursor: pointer;
+}
+
+.mkdir_from input[type="submit"]:hover
+{
+    background-color: turquoise;
+}
+
+.mkdir_from input[type="button"]:hover
+{
+    background-color: turquoise;
+}
+
+.mkdir_from input[type="text"]
+{
+    border: 1px solid cornflowerblue;
+    width: 98%;
 }
 
 .imgview a{
@@ -355,4 +427,21 @@ a, input, h1, img
 {
   position: absolute;
   cursor: pointer;
+}
+
+.loading_div
+{
+  z-index: 999;
+  position: absolute;
+  background: white;
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+
+.loading_img
+{
+  display: block;
+  margin: auto;
+  margin-top: 20%;
 }
