--- a/css/upload.css
+++ b/css/upload.css
@@ -16,7 +16,9 @@
 #drop_file_zone ul li{
   border: 1px solid lightgray;
   padding: 20px;
-  margin: 10px;
+  margin-left: 9px;
+  margin-right: 12px;
+  margin-bottom: 10px;
   cursor: pointer;
   width: 105px;
   height: 105px;
@@ -444,4 +446,42 @@ a, input, h1, img
   display: block;
   margin: auto;
   margin-top: 20%;
+}
+
+.search_condition
+{
+  border: 1px solid cornflowerblue;
+  border-bottom: none;
+  width: 313px;
+  position: absolute;
+  margin-left: 17px;
+  margin-top: 0%;
+  background: white;
+  display: none;
+}
+
+.search_condition ul
+{
+  display: contents;
+}
+
+.search_condition ul li
+{
+  text-align: center;
+  border-bottom: 1px solid cornflowerblue;
+  padding: 10px;
+}
+
+
+.search_condition ul li input[type="submit"], input[type="button"]
+{
+  background-color: cornflowerblue;
+  color: white;
+  border: none;
+  height: 40px;
+  padding: 0px 10px;
+  margin-right: 12px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  width: 80px;
 }
