--- a/css/upload.css
+++ b/css/upload.css
@@ -1,4 +1,5 @@
-#drop_file_zone {
+#drop_file_zone 
+{
   padding: 8px;
   font-size: 18px;
   flex : 1 1 auto;
@@ -6,14 +7,17 @@
   overflow-x: hidden;
 }
 
-#drop_file_zone ul{
+#drop_file_zone ul
+{
   width: fit-content;
   margin: 15px 0px;
   display: flex;
   flex-wrap: wrap;
   user-select: none;
 }
-#drop_file_zone ul li{
+
+#drop_file_zone ul li
+{
   border: 1px solid lightgray;
   padding: 20px;
   margin-left: 9px;
@@ -23,14 +27,18 @@
   width: 105px;
   height: 105px;
 }
-#drop_file_zone ul li:hover{
+
+#drop_file_zone ul li:hover
+{
   background-color: lightgray;
 }
 #drop_file_zone ul img{
   display: block;
   margin: 0px auto;
 }      
-#drop_file_zone ul li p{
+
+#drop_file_zone ul li p
+{
   text-align: center;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -38,16 +46,19 @@
   user-select: none;
 }
 
-#drag_upload_file #selectfile {
+#drag_upload_file #selectfile 
+{
   display: none;
 }
 
-#drop_file_zone{
+#drop_file_zone
+{
   height: 100%;
   width: 100%;
 }
 
-.leftmenu{
+.leftmenu
+{
   position: absolute;
   z-index: 120;
   top: 94px;
@@ -74,11 +85,13 @@
   cursor: pointer;
 }
 
-.leftmenu ul li a:hover{
+.leftmenu ul li a:hover
+{
   color: turquoise;
 }
 
-.rightmenu{
+.rightmenu
+{
   display: flex;
   -moz-flex-direction: column;
   -ms-flex-direction: column;
@@ -134,15 +147,20 @@
   padding-bottom: 8px;
 }
 
-.searchform{
+.searchform
+{
   width: 100%;
   border-bottom: 1px solid lightgray;
 }
-.searchform ul{
+
+.searchform ul
+{
   display: flex;
   padding: 14px 0px 0px 17px;
 }
-.searchform ul li input[type="submit"]{
+
+.searchform ul li input[type="submit"]
+{
   background-color: cornflowerblue;
   color: white;
   border: none;
@@ -150,7 +168,9 @@
   padding: 0px 10px;
   cursor: pointer;
 }
-.searchform ul li input[type="button"]{
+
+.searchform ul li input[type="button"]
+{
   background-color: cornflowerblue;
   color: white;
   border: none;
@@ -161,34 +181,45 @@
   cursor: pointer;
   width: 80px;
 }
-.searchform ul li input[type="submit"]:hover{
-  background-color: turquoise;
-}
-.searchform ul li input[type="button"]:hover{
+
+.searchform ul li input[type="submit"]:hover
+{
   background-color: turquoise;
 }
 
-#file_list img{
+.searchform ul li input[type="button"]:hover
+{
+  background-color: turquoise;
+}
+
+#file_list img
+{
   max-width: 100%; 
   max-height: auto;
   overflow: hidden;
 }
 
-.link{
+.link
+{
   display: flex;
   border-bottom: 1px solid lightgray;
   padding: 5px;
 
 }
-.link a{
+
+.link a
+{
   cursor: pointer;
 }
-.link a:hover{
+
+.link a:hover
+{
   color: turquoise;
 }
 
 
-.selection {
+.selection 
+{
   list-style-type: none;
   position: absolute;
   border: 1px solid cornflowerblue;
@@ -196,16 +227,21 @@
   background-color: cornflowerblue;
   border-color: cornflowerblue;
 }
-.dropped {
+
+.dropped
+{
   background-color: cornflowerblue;
   border-color: cornflowerblue;
 }	
-.active {  
+
+.active 
+{  
   background-color: cornflowerblue;
   border-color: cornflowerblue;
 }
 
-.contextmenu {
+.contextmenu 
+{
   display: none;
   position: absolute;
   width: 200px;
@@ -221,13 +257,15 @@
   z-index: 999999;
 }
 
-.contextmenu li {
+.contextmenu li 
+{
   border-left: 3px solid transparent;
   transition: ease .2s;
   cursor: pointer;
 }
 
-.contextmenu li a {
+.contextmenu li a 
+{
   display: block;
   padding: 10px;
   color: black;
@@ -236,16 +274,19 @@
   cursor: pointer;
 }
 
-.contextmenu li:hover {
+.contextmenu li:hover 
+{
   background: cornflowerblue;
   border-left: 3px solid blue;
 }
 
-.contextmenu li:hover a {
+.contextmenu li:hover a 
+{
   color: #FFFFFF;
 }
 
-.imgview{
+.imgview
+{
   display: none;
   position: absolute;
   z-index: 999;
@@ -285,7 +326,7 @@
   margin: 0px 0px 5px;
 }
 
-.mkdir_from input[type="submit"]
+.mkdir_submit_btn
 {
     color: white;
     background: cornflowerblue;
@@ -297,7 +338,7 @@
     cursor: pointer;
 }
 
-.mkdir_from input[type="button"]
+.mkdir_cancle_btn
 {
     color: white;
     background: cornflowerblue;
@@ -324,42 +365,52 @@
     width: 98%;
 }
 
-.imgview a{
+.imgview a
+{
   cursor: pointer;
   right: 30px;
   font-size: 20px;
   position: absolute;
 }
-.imgview a:hover{
+
+.imgview a:hover
+{
   color:turquoise;
 }
-.imgview img{
+
+.imgview img
+{
   position: relative;
 }
-.imgview li{
+
+.imgview li
+{
   padding: 20px 0px 50px 0px;
 }
 
-#trash_empty{
+#trash_empty
+{
   color: lightgray;
   right: 0;
   position: absolute;
-  
 }
 
-.nav_right_menu{
+.nav_right_menu
+{
   float: right;
   width: 260px;
 }
 
-#bell_img{
+#bell_img
+{
   margin: 6px;
   cursor: pointer;
   position: relative;
   float: right;
 }
 
-.msgmenu {
+.msgmenu 
+{
   display: none;
   position: absolute;
   width: 100%;
@@ -375,22 +426,28 @@
   font-size: 30px;
   border: 2px solid lightgrey;
 }
-.msgmenu li{
+
+.msgmenu li
+{
   cursor: pointer;
 }
 
-.msgmenu li a{
+.msgmenu li a
+{
   padding: 0px 15px;
   text-align: center;
 }
 
-.msg_btn_left{
+.msg_btn_left
+{
   display: inline-block;
   border-bottom: 2px solid lightgray;
   border-right: 2px solid lightgray;
   background-color: cornflowerblue;
 }
-.msg_btn_left a{
+
+.msg_btn_left a
+{
   padding: 0px 15px;
   text-align: center;
   color: white;
@@ -400,16 +457,21 @@
   -webkit-user-select: none;
   user-select: none;
 }
-.msg_btn_left:hover{
+
+.msg_btn_left:hover
+{
   background-color:turquoise;
 }
 
-.msg_btn_right{
+.msg_btn_right
+{
   display: inline-block;
   border-bottom: 2px solid lightgray;
   background-color: cornflowerblue;
 }
-.msg_btn_right a{
+
+.msg_btn_right a
+{
   padding: 0px 15px;
   text-align: center;
   color: white;
@@ -419,22 +481,29 @@
   -webkit-user-select: none;
   user-select: none;
 }
-.msg_btn_right:hover{
+
+.msg_btn_right:hover
+{
   background-color:turquoise;
 }
 
-.msg_content:hover{
+.msg_content:hover
+{
   background-color: turquoise;
 }
 
-.msg_content_read{
+.msg_content_read
+{
   background-color: lightgrey;
 }
-.msg_content_read:hover{
+
+.msg_content_read:hover
+{
   background-color: turquoise;
 }
 
-.msgcount{
+.msgcount
+{
   text-align: center;
   margin: 13px 20px;
   color: red;
@@ -498,7 +567,7 @@ a, input, h1, img
 }
 
 
-.search_condition ul li input[type="submit"], input[type="button"]
+.search_condition_submit_btn, .search_condition_cancle_btn
 {
   background-color: cornflowerblue;
   color: white;
