--- a/css/upload.css
+++ b/css/upload.css
@@ -317,6 +317,16 @@
   background-color: rgba(0, 0, 0, 0.7);
 }
 
+.share_inviteview
+{
+  display: none;
+  position: absolute;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
 .mkdir_form
 {
     position: absolute;
@@ -325,6 +335,16 @@
     margin-top: -120px;
     margin-left: -150px;
     left: 50%;
+}
+
+.share_invite
+{
+  position: absolute;
+  width: 300px;
+  top: 50%;
+  margin-top: -120px;
+  margin-left: -150px;
+  left: 50%;
 }
 
 .share_mkdir
@@ -376,6 +396,50 @@
 }
 
 .share_mkdir input[type="text"]{
+    border: 1px solid cornflowerblue;
+    width: 98%;
+}
+
+
+.share_invite a
+{
+  color: white;
+}
+
+.share_invite input[type="submit"]
+{
+  color: white;
+  background: cornflowerblue;
+  border: none;
+  padding: 7px 8px;
+  margin-top: 10px;
+  margin-right: 13px;
+  width: 47%;
+  cursor: pointer;
+}
+
+.share_invite input[type="button"]
+{
+  color: white;
+  background: cornflowerblue;
+  border: none;
+  padding: 7px 8px;
+  margin-top: 10px;
+  width: 47%;
+  cursor: pointer;
+}
+
+.share_invite input[type="button"]:hover
+{
+  background-color: turquoise;
+}
+
+.share_invite input[type="submit"]:hover
+{
+    background-color: turquoise;
+}
+
+.share_invite input[type="text"]{
     border: 1px solid cornflowerblue;
     width: 98%;
 }
